# torch-js

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  .prettierignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.sh  package.json
.github/workflows/: ci.yml  cuda-test.yml  publish-prebuild-test.yml  publish-prebuild.yml  publish.yml
.github/workflows/scripts/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
lib/: torch.d.ts  torch.js
src/: ATen.cc  ScriptModule.cc  ScriptModule.h  addon.cc
tests/: rand.test.js  runTorch.js  scriptmodule.test.js  tensor.test.js
